--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,10 +37,9 @@ jobs:
           python -m pytest -q || true
 
       - name: Authenticate to GCP using Service Account Key
-        uses: google-github-actions/setup-gcloud@v2
+        uses: google-github-actions/auth@v1
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ vars.GCP_PROJECT_ID }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
 
       - name: Configure gcloud
