--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,13 +9,11 @@ on:
       - dev
   pull_request:
     branches: [ main ]
-
-
 env:
   REGION: "asia-south1"
   AR_REPO: "apps"
 
-  run-name:  Devops-Pipeline
+run-name: Devops
 
 jobs:
   build:
