--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,3 @@
-
 name: CI/CD (with Trivy & Environments)
 
 on:
@@ -9,18 +8,20 @@ on:
       - dev
   pull_request:
     branches: [ main ]
+
 env:
   REGION: "asia-south1"
   AR_REPO: "apps"
+  GCP_PROJECT_ID: "my-gcp-project"       # <-- Replace with your project ID
   GCP_LOCATION: "asia-south1"
 
-run-name: Devops
+run-name: DevOps Pipeline
 
 jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      image: ${{ steps.set-image.outputs.image }}
+      image: ${{ steps.set-image.outputs.IMAGE }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,35 +36,33 @@ jobs:
           pip install -r app/requirements.txt
           python -m pytest -q || true
 
-      - name: Authenticate to GCP using Service Account Key
+      - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-
-      - name: Configure gcloud
+      - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ vars.GCP_PROJECT_ID }}
+          project_id: $GCP_PROJECT_ID
+          install_components: ['kubectl']
 
       - name: Docker build
-        run: |
-          IMAGE="${{ vars.GCP_LOCATION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/${{ env.AR_REPO }}/devops-app:${{ github.sha }}"
-          docker build -t "$IMAGE" .
-          echo "IMAGE=$IMAGE" >> $GITHUB_OUTPUT
         id: set-image
+        run: |
+          IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${GITHUB_SHA}"
+          echo "IMAGE=$IMAGE" >> "$GITHUB_OUTPUT"
+          docker build -t "$IMAGE" .
 
   trivy-scan:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Run Trivy vulnerability scan
         uses: aquasecurity/trivy-action@v0.13.0
         with:
-          image-ref: ${{ needs.build.outputs.image }}
+          image-ref: ${{ needs.build.outputs.IMAGE }}
           format: 'table'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
@@ -76,24 +75,27 @@ jobs:
     environment: dev
     steps:
       - uses: actions/checkout@v4
-      - name: Authenticate to GCP (OIDC)
-        uses: google-github-actions/auth@v2
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v1
         with:
-          workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
-      - name: Configure gcloud
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+      - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ vars.GCP_PROJECT_ID }}
+          project_id: $GCP_PROJECT_ID
+          install_components: ['kubectl']
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
-          project_id: ${{ vars.GCP_PROJECT_ID }}
-          cluster_name: ${{ vars.GKE_CLUSTER_NAME_DEV }}
-          location: ${{ vars.GCP_REGION }}
+          project_id: $GCP_PROJECT_ID
+          cluster_name: ${{ env.GKE_CLUSTER_NAME_DEV }}
+          location: $GCP_LOCATION
       - name: Deploy (Helm)
         run: |
-          helm upgrade --install devops-app k8s/helm/devops-app             --set image.repository=${{ needs.build.outputs.image }}             --set image.tag=${{ github.sha }}             --namespace dev --create-namespace
+          helm upgrade --install devops-app k8s/helm/devops-app \
+            --set image.repository=${{ needs.build.outputs.IMAGE }} \
+            --set image.tag=${GITHUB_SHA} \
+            --namespace dev --create-namespace
 
   deploy-stage:
     needs: trivy-scan
@@ -102,24 +104,27 @@ jobs:
     environment: staging
     steps:
       - uses: actions/checkout@v4
-      - name: Authenticate to GCP (OIDC)
-        uses: google-github-actions/auth@v2
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v1
         with:
-          workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
-      - name: Configure gcloud
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+      - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ vars.GCP_PROJECT_ID }}
+          project_id: $GCP_PROJECT_ID
+          install_components: ['kubectl']
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
-          project_id: ${{ vars.GCP_PROJECT_ID }}
-          cluster_name: ${{ vars.GKE_CLUSTER_NAME_STAGE }}
-          location: ${{ vars.GCP_REGION }}
+          project_id: $GCP_PROJECT_ID
+          cluster_name: ${{ env.GKE_CLUSTER_NAME_STAGE }}
+          location: $GCP_LOCATION
       - name: Deploy (Helm)
         run: |
-          helm upgrade --install devops-app k8s/helm/devops-app             --set image.repository=${{ needs.build.outputs.image }}             --set image.tag=${{ github.sha }}             --namespace staging --create-namespace
+          helm upgrade --install devops-app k8s/helm/devops-app \
+            --set image.repository=${{ needs.build.outputs.IMAGE }} \
+            --set image.tag=${GITHUB_SHA} \
+            --namespace staging --create-namespace
 
   deploy-prod:
     needs: deploy-stage
@@ -128,21 +133,24 @@ jobs:
     environment: production
     steps:
       - uses: actions/checkout@v4
-      - name: Authenticate to GCP (OIDC)
-        uses: google-github-actions/auth@v2
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v1
         with:
-          workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
-      - name: Configure gcloud
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+      - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ vars.GCP_PROJECT_ID }}
+          project_id: $GCP_PROJECT_ID
+          install_components: ['kubectl']
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
-          project_id: ${{ vars.GCP_PROJECT_ID }}
-          cluster_name: ${{ vars.GKE_CLUSTER_NAME_PROD }}
-          location: ${{ vars.GCP_REGION }}
+          project_id: $GCP_PROJECT_ID
+          cluster_name: ${{ env.GKE_CLUSTER_NAME_PROD }}
+          location: $GCP_LOCATION
       - name: Deploy (Helm)
         run: |
-          helm upgrade --install devops-app k8s/helm/devops-app             --set image.repository=${{ needs.build.outputs.image }}             --set image.tag=${{ github.sha }}             --namespace prod --create-namespace
+          helm upgrade --install devops-app k8s/helm/devops-app \
+            --set image.repository=${{ needs.build.outputs.IMAGE }} \
+            --set image.tag=${GITHUB_SHA} \
+            --namespace prod --create-namespace
