--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,19 +8,18 @@ on:
       - dev
   pull_request:
     branches: [ main ]
-
 env:
   REGION: "asia-south1"
   AR_REPO: "apps"
   GCP_LOCATION: "asia-south1"
 
-run-name: DevOps Pipeline
+run-name: Devops
 
 jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      image: ${{ steps.set-image.outputs.IMAGE }}
+      image: ${{ steps.set-image.outputs.image }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,34 +33,35 @@ jobs:
         run: |
           pip install -r app/requirements.txt
           python -m pytest -q || true
-
-      - name: Authenticate to GCP
+      - name: Authenticate to GCP using Service Account Key
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Setup gcloud CLI
+
+      - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: $GCP_PROJECT_ID
-
+          project_id: ${{ vars.GCP_PROJECT_ID }}
 
       - name: Docker build
-        id: set-image
         run: |
-          IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${GITHUB_SHA}"
-          echo "IMAGE=$IMAGE" >> "$GITHUB_OUTPUT"
+          IMAGE="${{ vars.GCP_LOCATION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/${{ env.AR_REPO }}/devops-app:${{ github.sha }}"
           docker build -t "$IMAGE" .
+          echo "IMAGE=$IMAGE" >> $GITHUB_OUTPUT
+        id: set-image
 
   trivy-scan:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Run Trivy vulnerability scan
         uses: aquasecurity/trivy-action@v0.13.0
         with:
-          image-ref: ${{ needs.build.outputs.IMAGE }}
+          image-ref: ${{ needs.build.outputs.image }}
           format: 'table'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
@@ -74,28 +74,24 @@ jobs:
     environment: dev
     steps:
       - uses: actions/checkout@v4
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v1
+      - name: Authenticate to GCP (OIDC)
+        uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-      - name: Setup gcloud CLI
+          workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+      - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: $GCP_PROJECT_ID
-
+          project_id: ${{ vars.GCP_PROJECT_ID }}
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
-          project_id: $GCP_PROJECT_ID
-          cluster_name: ${{ env.GKE_CLUSTER_NAME_DEV }}
-          location: $GCP_LOCATION
+          project_id: ${{ vars.GCP_PROJECT_ID }}
+          cluster_name: ${{ vars.GKE_CLUSTER_NAME_DEV }}
+          location: ${{ vars.GCP_REGION }}
       - name: Deploy (Helm)
         run: |
-          helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.repository=${{ needs.build.outputs.IMAGE }} \
-            --set image.tag=${GITHUB_SHA} \
-            --namespace dev --create-namespace
-
+          helm upgrade --install devops-app k8s/helm/devops-app             --set image.repository=${{ needs.build.outputs.image }}             --set image.tag=${{ github.sha }}             --namespace dev --create-namespace
   deploy-stage:
     needs: trivy-scan
     runs-on: ubuntu-latest
@@ -103,29 +99,24 @@ jobs:
     environment: staging
     steps:
       - uses: actions/checkout@v4
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v1
+      - name: Authenticate to GCP (OIDC)
+        uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-          
-      - name: Setup gcloud CLI
+          workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+      - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: $GCP_PROJECT_ID
-
+          project_id: ${{ vars.GCP_PROJECT_ID }}
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
-          project_id: $GCP_PROJECT_ID
-          cluster_name: ${{ env.GKE_CLUSTER_NAME_STAGE }}
-          location: $GCP_LOCATION
+          project_id: ${{ vars.GCP_PROJECT_ID }}
+          cluster_name: ${{ vars.GKE_CLUSTER_NAME_STAGE }}
+          location: ${{ vars.GCP_REGION }}
       - name: Deploy (Helm)
         run: |
-          helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.repository=${{ needs.build.outputs.IMAGE }} \
-            --set image.tag=${GITHUB_SHA} \
-            --namespace staging --create-namespace
-
+          helm upgrade --install devops-app k8s/helm/devops-app             --set image.repository=${{ needs.build.outputs.image }}             --set image.tag=${{ github.sha }}             --namespace staging --create-namespace
   deploy-prod:
     needs: deploy-stage
     runs-on: ubuntu-latest
@@ -133,24 +124,21 @@ jobs:
     environment: production
     steps:
       - uses: actions/checkout@v4
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v1
+      - name: Authenticate to GCP (OIDC)
+        uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-      - name: Setup gcloud CLI
+          workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+      - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: $GCP_PROJECT_ID
-      
+          project_id: ${{ vars.GCP_PROJECT_ID }}
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
-          project_id: $GCP_PROJECT_ID
-          cluster_name: ${{ env.GKE_CLUSTER_NAME_PROD }}
-          location: $GCP_LOCATION
+          project_id: ${{ vars.GCP_PROJECT_ID }}
+          cluster_name: ${{ vars.GKE_CLUSTER_NAME_PROD }}
+          location: ${{ vars.GCP_REGION }}
       - name: Deploy (Helm)
         run: |
-          helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.repository=${{ needs.build.outputs.IMAGE }} \
-            --set image.tag=${GITHUB_SHA} \
-            --namespace prod --create-namespace
+          helm upgrade --install devops-app k8s/helm/devops-app             --set image.repository=${{ needs.build.outputs.image }}             --set image.tag=${{ github.sha }}             --namespace prod --create-namespace
