--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -80,8 +80,8 @@ jobs:
         with:
           image-ref: ${{ needs.build.outputs.IMAGE }}
           format: 'table'
-          exit-code: '1'
-          severity: 'CRITICAL,HIGH'
+          exit-code: '0'
+          severity: 'CRITICAL'
           ignore-unfixed: true
           driver: 'docker'
 
