--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,12 +15,14 @@ env:
   GCP_LOCATION: "asia-south1"
   GCP_PROJECT_ID: "durable-rhythm-465310-i5"
   GKE_CLUSTER_NAME_DEV: dev
+  GKE_CLUSTER_NAME_STAGE: stage
+  GKE_CLUSTER_NAME_PROD: prod
 
 jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      image: ${{ steps.set-image.outputs.IMAGE }}
+      image: ${{ steps.set-image.outputs.image }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,7 +32,7 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install deps & tests
+      - name: Install deps & run tests
         run: |
           pip install -r app/requirements.txt
           python -m pytest -q || true
@@ -44,47 +46,39 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
-    
+
       - name: Docker build & push
         id: set-image
         run: |
-          gcloud auth configure-docker asia-south1-docker.pkg.dev
+          gcloud auth configure-docker ${GCP_LOCATION}-docker.pkg.dev
           IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${GITHUB_SHA}"
-          echo "IMAGE=$IMAGE" >> "$GITHUB_OUTPUT"
           docker build -t "$IMAGE" .
           docker push "$IMAGE"
+          echo "image=$IMAGE" >> "$GITHUB_OUTPUT"
 
   trivy-scan:
     needs: build
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
-
       - name: Configure gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
-
-      - name: Authenticate to GCP (Docker)
-        run: |
-          gcloud auth configure-docker "${GCP_LOCATION}-docker.pkg.dev"
-
+      - name: Authenticate Docker
+        run: gcloud auth configure-docker ${GCP_LOCATION}-docker.pkg.dev
       - name: Run Trivy vulnerability scan
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: ${{ needs.build.outputs.IMAGE }}
+          image-ref: ${{ needs.build.outputs.image }}
           format: 'table'
           exit-code: '0'
           severity: 'CRITICAL'
           ignore-unfixed: true
-          driver: 'docker'
 
   deploy-dev:
     needs: trivy-scan
@@ -107,15 +101,12 @@ jobs:
           project_id: ${{ env.GCP_PROJECT_ID }}
           cluster_name: ${{ env.GKE_CLUSTER_NAME_DEV }}
           location: ${{ env.REGION }}
-          
-      - name: Docker build & push
-        id: set-image
+      - name: Deploy (Helm)
         run: |
-          gcloud auth configure-docker ${GCP_LOCATION}-docker.pkg.dev
-          IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${GITHUB_SHA}"
-          docker build -t "$IMAGE" .
-          docker push "$IMAGE"
-          echo "image=$IMAGE" >> "$GITHUB_OUTPUT"
+          helm upgrade --install devops-app k8s/helm/devops-app \
+            --set image.repository=${{ needs.build.outputs.image }} \
+            --set image.tag=${GITHUB_SHA} \
+            --namespace dev --create-namespace
 
   deploy-stage:
     needs: trivy-scan
@@ -141,7 +132,7 @@ jobs:
       - name: Deploy (Helm)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.repository=${{ needs.build.outputs.IMAGE }} \
+            --set image.repository=${{ needs.build.outputs.image }} \
             --set image.tag=${GITHUB_SHA} \
             --namespace staging --create-namespace
 
@@ -169,6 +160,6 @@ jobs:
       - name: Deploy (Helm)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.repository=${{ needs.build.outputs.IMAGE }} \
+            --set image.repository=${{ needs.build.outputs.image }} \
             --set image.tag=${GITHUB_SHA} \
             --namespace prod --create-namespace
