--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,14 +15,12 @@ env:
   GCP_LOCATION: "asia-south1"
   GCP_PROJECT_ID: "durable-rhythm-465310-i5"
   GKE_CLUSTER_NAME_DEV: dev
-  GKE_CLUSTER_NAME_STAGE: stage
-  GKE_CLUSTER_NAME_PROD: prod
 
 jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      image: ${{ steps.set-image.outputs.image }}
+      image: ${{ steps.set-image.outputs.IMAGE }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,11 +30,10 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install deps & run tests
+      - name: Install deps & tests
         run: |
           pip install -r app/requirements.txt
           python -m pytest -q || true
-
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
@@ -46,39 +43,45 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
-
+    
       - name: Docker build & push
         id: set-image
         run: |
-          gcloud auth configure-docker ${GCP_LOCATION}-docker.pkg.dev
+          gcloud auth configure-docker asia-south1-docker.pkg.dev
           IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${GITHUB_SHA}"
+          echo "IMAGE=$IMAGE" >> "$GITHUB_OUTPUT"
           docker build -t "$IMAGE" .
           docker push "$IMAGE"
-          echo "image=$IMAGE" >> "$GITHUB_OUTPUT"
-
   trivy-scan:
     needs: build
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: Configure gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
-      - name: Authenticate Docker
-        run: gcloud auth configure-docker ${GCP_LOCATION}-docker.pkg.dev
+
+      - name: Authenticate to GCP (Docker)
+        run: |
+          gcloud auth configure-docker "${GCP_LOCATION}-docker.pkg.dev"
       - name: Run Trivy vulnerability scan
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: ${{ needs.build.outputs.image }}
+          image-ref: ${{ needs.build.outputs.IMAGE }}
           format: 'table'
           exit-code: '0'
           severity: 'CRITICAL'
           ignore-unfixed: true
+          driver: 'docker'
 
   deploy-dev:
     needs: trivy-scan
@@ -101,13 +104,15 @@ jobs:
           project_id: ${{ env.GCP_PROJECT_ID }}
           cluster_name: ${{ env.GKE_CLUSTER_NAME_DEV }}
           location: ${{ env.REGION }}
-      - name: Deploy (Helm)
+          
+      - name: Docker build & push
+        id: set-image
         run: |
-          helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.repository=${{ needs.build.outputs.image }} \
-            --set image.tag=${GITHUB_SHA} \
-            --namespace dev --create-namespace
-
+          gcloud auth configure-docker ${GCP_LOCATION}-docker.pkg.dev
+          IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${GITHUB_SHA}"
+          docker build -t "$IMAGE" .
+          docker push "$IMAGE"
+          echo "image=$IMAGE" >> "$GITHUB_OUTPUT"
   deploy-stage:
     needs: trivy-scan
     runs-on: ubuntu-latest
@@ -132,10 +137,9 @@ jobs:
       - name: Deploy (Helm)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.repository=${{ needs.build.outputs.image }} \
+            --set image.repository=${{ needs.build.outputs.IMAGE }} \
             --set image.tag=${GITHUB_SHA} \
             --namespace staging --create-namespace
-
   deploy-prod:
     needs: deploy-stage
     runs-on: ubuntu-latest
@@ -160,6 +164,6 @@ jobs:
       - name: Deploy (Helm)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.repository=${{ needs.build.outputs.image }} \
+            --set image.repository=${{ needs.build.outputs.IMAGE }} \
             --set image.tag=${GITHUB_SHA} \
             --namespace prod --create-namespace
