--- a/k8s/helm/devops-app/templates/service.yaml
+++ b/k8s/helm/devops-app/templates/service.yaml
@@ -1,13 +1,11 @@
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: devops-app
+  name: {{ include "devops-app.fullname" . }}
 spec:
   type: {{ .Values.service.type }}
   selector:
-    app: devops-app
+    app: {{ include "devops-app.name" . }}
   ports:
-    - name: http
-      port: {{ .Values.service.port }}
+    - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
