--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,6 +15,8 @@ env:
   GCP_LOCATION: "asia-south1"
   GCP_PROJECT_ID: "durable-rhythm-465310-i5"
   GKE_CLUSTER_NAME_DEV: dev
+  GKE_CLUSTER_NAME_STAGE: stage
+  GKE_CLUSTER_NAME_PROD: prod
 
 jobs:
   build:
@@ -30,10 +32,11 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install deps & tests
+      - name: Install deps & run tests
         run: |
           pip install -r app/requirements.txt
           python -m pytest -q || true
+
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
@@ -43,19 +46,19 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
-    
-      - name: Docker build & push
+
+      - name: Build & Push Docker image
         id: set-image
         run: |
-          gcloud auth configure-docker asia-south1-docker.pkg.dev
+          gcloud auth configure-docker ${GCP_LOCATION}-docker.pkg.dev
           IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${GITHUB_SHA}"
           echo "IMAGE=$IMAGE" >> "$GITHUB_OUTPUT"
           docker build -t "$IMAGE" .
           docker push "$IMAGE"
+
   trivy-scan:
     needs: build
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -70,10 +73,11 @@ jobs:
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
 
-      - name: Authenticate to GCP (Docker)
+      - name: Authenticate Docker to GCP
         run: |
           gcloud auth configure-docker "${GCP_LOCATION}-docker.pkg.dev"
-      - name: Run Trivy vulnerability scan
+
+      - name: Run Trivy scan
         uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: ${{ needs.build.outputs.IMAGE }}
@@ -86,60 +90,69 @@ jobs:
   deploy-dev:
     needs: trivy-scan
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/dev')
+    if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main'
     environment: dev
     steps:
       - uses: actions/checkout@v4
+
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
+
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
           cluster_name: ${{ env.GKE_CLUSTER_NAME_DEV }}
           location: ${{ env.REGION }}
-          
-      - name: Docker build & push
-        id: set-image
+
+      - name: Deploy (Helm) to Dev
         run: |
-          gcloud auth configure-docker ${GCP_LOCATION}-docker.pkg.dev
-          IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${GITHUB_SHA}"
-          docker build -t "$IMAGE" .
-          docker push "$IMAGE"
-          echo "image=$IMAGE" >> "$GITHUB_OUTPUT"
+          helm upgrade --install devops-app k8s/helm/devops-app \
+            --set image.repository=${{ needs.build.outputs.IMAGE }} \
+            --set image.tag=${GITHUB_SHA} \
+            --namespace dev --create-namespace \
+            --wait --timeout 5m
+
   deploy-stage:
     needs: trivy-scan
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/stage' || startsWith(github.ref, 'refs/heads/stage/')
+    if: github.ref == 'refs/heads/stage'
     environment: staging
     steps:
       - uses: actions/checkout@v4
+
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
+
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
           cluster_name: ${{ env.GKE_CLUSTER_NAME_STAGE }}
           location: ${{ env.REGION }}
-      - name: Deploy (Helm)
+
+      - name: Deploy (Helm) to Stage
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
             --set image.repository=${{ needs.build.outputs.IMAGE }} \
             --set image.tag=${GITHUB_SHA} \
-            --namespace staging --create-namespace
+            --namespace staging --create-namespace \
+            --wait --timeout 5m
+
   deploy-prod:
     needs: deploy-stage
     runs-on: ubuntu-latest
@@ -147,23 +160,28 @@ jobs:
     environment: production
     steps:
       - uses: actions/checkout@v4
+
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
+
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
           cluster_name: ${{ env.GKE_CLUSTER_NAME_PROD }}
           location: ${{ env.REGION }}
-      - name: Deploy (Helm)
+
+      - name: Deploy (Helm) to Prod
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
             --set image.repository=${{ needs.build.outputs.IMAGE }} \
             --set image.tag=${GITHUB_SHA} \
-            --namespace prod --create-namespace
+            --namespace prod --create-namespace \
+            --wait --timeout 5m
