--- a/k8s/helm/devops-app/values.yaml
+++ b/k8s/helm/devops-app/values.yaml
@@ -1,4 +1,9 @@
 replicaCount: 3
+
+image:
+  repository: "asia-south1-docker.pkg.dev/durable-rhythm-465310-i5/apps/devops-app"
+  tag: "47ba670e1f65fd485d6128f06a91e54c3223b2dd"
+
 service:
   type: LoadBalancer
   port: 80
