--- a/k8s/helm/devops-app/values.yaml
+++ b/k8s/helm/devops-app/values.yaml
@@ -1,10 +1,19 @@
 replicaCount: 3
 
 image:
-  fullName: ""   # will be overridden by workflow
-
+  repository: ""   # optional: default repo (if you use tags). For digests we use image.digest
+  tag: ""
+  digest: ""       # if set, deployment uses this full value: repo@sha256:...
 
 service:
   type: LoadBalancer
   port: 80
   targetPort: 8080
+
+resources:
+  limits:
+    cpu: 500m
+    memory: 512Mi
+  requests:
+    cpu: 250m
+    memory: 256Mi
