--- a/k8s/helm/devops-app/templates/deployment.yaml
+++ b/k8s/helm/devops-app/templates/deployment.yaml
@@ -20,7 +20,16 @@ spec:
         app: {{ include "devops-app.name" . }}
     spec:
       containers:
-        - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        - name: {{ include "devops-app.name" . }}
+          image: >-
+            {{- if .Values.image.digest }}
+            {{ .Values.image.digest }}
+            {{- else }}
+            {{ .Values.image.repository }}:{{ .Values.image.tag }}
+            {{- end }}
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: {{ .Values.service.targetPort }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+      terminationGracePeriodSeconds: 30
