--- a/k8s/helm/devops-app/templates/service.yaml
+++ b/k8s/helm/devops-app/templates/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "devops-app.fullname" . }}
+  labels:
+    app: {{ include "devops-app.name" . }}
 spec:
   type: {{ .Values.service.type }}
   selector:
@@ -9,3 +11,4 @@ spec:
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
+      protocol: TCP
