--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install deps & run tests
         run: |
-          pip install -r requirements.txt
+          pip install -r app/requirements.txt
           python -m pytest -q || true
 
       - name: Authenticate to GCP
