--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -109,12 +109,21 @@ jobs:
           location: ${{ env.REGION }}
           project_id: ${{ env.GCP_PROJECT_ID }}
 
+      - name: Ensure Helm release is not stuck
+        run: |
+          RELEASE="devops-app"
+          NAMESPACE="dev"
+          if helm status "$RELEASE" -n "$NAMESPACE" | grep -q "pending"; then
+            echo "⚠️ Release is stuck, cleaning up..."
+            helm rollback "$RELEASE" 0 -n "$NAMESPACE" || true
+          fi
+
       - name: Helm deploy to dev (digest)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
             --set image.digest="${{ needs.build.outputs.digest }}" \
             --namespace dev --create-namespace \
-            --wait --timeout 5m
+            --atomic --timeout 5m
 
   deploy-stage:
     needs: trivy-scan
