--- a/k8s/helm/devops-app/templates/deployment.yaml
+++ b/k8s/helm/devops-app/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
         - name: {{ include "devops-app.name" . }}
           image: >-
             {{- if .Values.image.digest }}
-            {{ .Values.image.digest }}
+            {{ .Values.image.repository }}@{{ .Values.image.digest }}
             {{- else }}
             {{ .Values.image.repository }}:{{ .Values.image.tag }}
             {{- end }}
