--- a/k8s/helm/devops-app/values.yaml
+++ b/k8s/helm/devops-app/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: asia-south1-docker.pkg.dev/durable-rhythm-465310-i5/apps/devops-app
-  tag: ""
+  tag: "latest"   # <-- Set a valid default tag here
   digest: "" 
 
 service:
