--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,8 @@ on:
       - main
       - stage
       - dev
+    tags:
+      - 'v*'
 
 env:
   REGION: "asia-south1"
@@ -14,7 +16,7 @@ env:
   GCP_LOCATION: "asia-south1"
   GCP_PROJECT_ID: "durable-rhythm-465310-i5"
   GKE_CLUSTER_NAME_DEV: dev
-  GKE_CLUSTER_NAME_STAGE: dev
+  GKE_CLUSTER_NAME_STAGE: stage
   GKE_CLUSTER_NAME_PROD: prod
 
 jobs:
@@ -91,24 +93,20 @@ jobs:
     environment: dev
     steps:
       - uses: actions/checkout@v4
-
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
-
       - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
-
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
           cluster_name: ${{ env.GKE_CLUSTER_NAME_DEV }}
           location: ${{ env.REGION }}
           project_id: ${{ env.GCP_PROJECT_ID }}
-
       - name: Ensure Helm release is not stuck
         run: |
           RELEASE="devops-app"
@@ -117,7 +115,6 @@ jobs:
             echo "⚠️ Release is stuck, cleaning up..."
             helm rollback "$RELEASE" 0 -n "$NAMESPACE" || true
           fi
-
       - name: Helm deploy to dev (digest)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
@@ -126,46 +123,34 @@ jobs:
             --atomic --timeout 5m
 
   deploy-stage:
-    needs: trivy-scan
+    needs: [build, trivy-scan]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/stage'
     environment: staging
     steps:
       - uses: actions/checkout@v4
-
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
-
       - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
-
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
           cluster_name: ${{ env.GKE_CLUSTER_NAME_STAGE }}
           location: ${{ env.REGION }}
           project_id: ${{ env.GCP_PROJECT_ID }}
-          
-      - name: Deploy (Helm rolling upgrade)
-        run: |
-          helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.repository="${{ needs.build.outputs.IMAGE }}" \
-            --namespace stage --create-namespace
-
       - name: Ensure Helm release is not stuck
         run: |
           RELEASE="devops-app"
-          NAMESPACE="dev"
+          NAMESPACE="stage"
           if helm status "$RELEASE" -n "$NAMESPACE" | grep -q "pending"; then
             echo "⚠️ Release is stuck, cleaning up..."
             helm rollback "$RELEASE" 0 -n "$NAMESPACE" || true
           fi
-
-
       - name: Helm deploy to stage (digest)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
@@ -174,30 +159,26 @@ jobs:
             --wait --timeout 5m
 
   deploy-prod:
-    needs: deploy-stage
+    needs: [build, trivy-scan, deploy-stage]
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    if: github.ref == 'refs/heads/main'
     environment: production
     steps:
       - uses: actions/checkout@v4
-
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
-
       - name: Configure gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
-
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
           cluster_name: ${{ env.GKE_CLUSTER_NAME_PROD }}
           location: ${{ env.REGION }}
           project_id: ${{ env.GCP_PROJECT_ID }}
-
       - name: Helm deploy to prod (digest)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
