--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       digest: ${{ steps.set-image.outputs.digest }}
+      tag: ${{ steps.set-image.outputs.tag }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -53,8 +54,21 @@ jobs:
         run: |
           set -eux
           gcloud auth configure-docker ${GCP_LOCATION}-docker.pkg.dev
-          IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:latest"
-          docker build -t "$IMAGE" .
+          
+          # Use a unique tag for the build
+          TAG=${GITHUB_SHA::8}
+          IMAGE="${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${TAG}"
+          
+          # Also tag with the version if the workflow was triggered by a tag
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            VERSION_TAG="${GITHUB_REF#refs/tags/}"
+            docker build -t "$IMAGE" -t "${GCP_LOCATION}-docker.pkg.dev/${GCP_PROJECT_ID}/${AR_REPO}/devops-app:${VERSION_TAG}" .
+            echo "tag=$VERSION_TAG" >> "$GITHUB_OUTPUT"
+          else
+            docker build -t "$IMAGE" .
+            echo "tag=$TAG" >> "$GITHUB_OUTPUT"
+          fi
+          
           docker push "$IMAGE"
           # extract repo@sha256:... digest
           DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' "$IMAGE")
@@ -151,17 +165,17 @@ jobs:
             echo "⚠️ Release is stuck, cleaning up..."
             helm rollback "$RELEASE" 0 -n "$NAMESPACE" || true
           fi
-      - name: Helm deploy to stage (digest)
+      - name: Helm deploy to stage (tag)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.digest="${{ needs.build.outputs.digest }}" \
+            --set image.tag="${{ needs.build.outputs.tag }}" \
             --namespace stage --create-namespace \
             --wait --timeout 5m
 
   deploy-prod:
     needs: [build, trivy-scan, deploy-stage]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/tags/')
     environment: production
     steps:
       - uses: actions/checkout@v4
@@ -179,9 +193,9 @@ jobs:
           cluster_name: ${{ env.GKE_CLUSTER_NAME_PROD }}
           location: ${{ env.REGION }}
           project_id: ${{ env.GCP_PROJECT_ID }}
-      - name: Helm deploy to prod (digest)
+      - name: Helm deploy to prod (tag)
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
-            --set image.digest="${{ needs.build.outputs.digest }}" \
+            --set image.tag="${{ needs.build.outputs.tag }}" \
             --namespace prod --create-namespace \
             --wait --timeout 5m
