--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -133,6 +133,7 @@ jobs:
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
             --set image.digest="${{ needs.build.outputs.digest }}" \
+            --set replicaCount=3 \
             --namespace dev --create-namespace \
             --atomic --timeout 5m
 
@@ -169,6 +170,7 @@ jobs:
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
             --set image.tag="${{ needs.build.outputs.tag }}" \
+            --set replicaCount=3 \
             --namespace stage --create-namespace \
             --wait --timeout 5m
 
@@ -197,5 +199,6 @@ jobs:
         run: |
           helm upgrade --install devops-app k8s/helm/devops-app \
             --set image.tag="${{ needs.build.outputs.tag }}" \
+            --set replicaCount=3 \
             --namespace prod --create-namespace \
             --wait --timeout 5m
